--- a/package.json
+++ b/package.json
@@ -5,12 +5,22 @@
     "main": "index.js",
     "scripts": {
         "build": "tsc",
-        "start": "node build/index.js",
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "start": "node build/src-publisher/index.js",
+        "start:c": "node build/src-consumer/index.js",
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "dev": "tsc-watch --onSuccess \"node ./build/src-publisher/index.js\"",
+        "devc": "tsc-watch --onSuccess \"node ./build/src-consumer/index.js\""
     },
     "author": "Shashank",
     "license": "ISC",
     "devDependencies": {
+        "@types/amqplib": "^0.8.2",
+        "@types/tsc-watch": "^4.2.0",
+        "tsc-watch": "^4.6.0",
         "typescript": "^4.5.4"
+    },
+    "dependencies": {
+        "amqplib": "^0.8.0",
+        "dotenv": "^11.0.0"
     }
 }
