--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,11 +9,11 @@
         "module": "commonjs",
         "pretty": true,
         "sourceMap": true,
-        "outDir": "./build",
+        "outDir": "build",
         "allowJs": true,
         "noEmit": false,
         "esModuleInterop": true
     },
-    "include": ["./src/**/*"],
+    "include": ["src-publisher/**/*", "src-consumer/**/*"],
     "exclude": ["node_modules", "tests", "build"]
 }
