--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-Queue = 
-User = 
-Password = 
-IP = 
-Port = 
-vHost = 
+Queue = <string : Add queue name here, example = jack-test>
+User = <string : Add user name here, example = jack>
+Password = <string : Add password here, example = jack123>
+IP = <string : Add IP address here, example = 127.0.0.1>
+Port = <number : Add port number here, example = 5672>
+vHost = <string : Add vHost here>
